--- a/src/google/res/values-pt/strings.xml
+++ b/src/google/res/values-pt/strings.xml
@@ -861,4 +861,15 @@
     <string name="settings_auto_greeting_subtitle">Permitir ao Topface começar automaticamente uma conversa com uma saudação sempre que alguém te envia um Gosto</string>
     <string name="take_photo_text_1">Por favor, faz upload de uma foto tua para começares a falar.</string>
     <string name="take_photo_text_2">Apenas tu deves estar na foto; todas as fotos são revistas pelos nossos moderadores para garantir que as regras são seguidas.</string>
+    <string name="unlock_by_viewed_ad_video_button_text">Desbloquear gratuitamente a %s</string>
+    <plurals name="free_minutes">
+        <item quantity="zero">%d minuto</item>
+        <item quantity="other">%d minutos</item>
+        <item quantity="one">%d minuto</item>
+    </plurals>
+    <string name="thanks_for_your_rate_title">Obrigada pela tua opinião</string>
+    <string name="thanks_for_your_rate_top_label">Para mostrar a nossa gratidão, iremos postar uma foto tua no feed de notícias das fotos!</string>
+    <string name="thanks_for_your_rate_bottom_label">Partilha a tua opinião na App Store. Valorizamos todos os comentários!</string>
+    <string name="thanks_for_your_rate_rate_app">Deixa a tua opinião na App Store</string>
+    <string name="thanks_for_your_rate_close">Fechar</string>
 </resources>
