--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1004,19 +1004,6 @@
         начать приятное знакомство
     </string>
 
-    <plurals name="novice_sympathies_bonus">
-        <item quantity="zero">Вы получаете %1$d симпатий в\nподарок! Это означает, что
-           вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
-        <item quantity="one">Вы получаете %1$d симпатию в\nподарок! Это означает, что
-        вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
-        <item quantity="many">Вы получаете %1$d симпатий в\nподарок! Это означает, что
-        вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
-        <item quantity="few">Вы получаете %1$d симпатии в\nподарок! Это означает, что
-        вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
-        <item quantity="other">Вы получаете %1$d симпатий в\nподарок! Это означает, что
-        вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
-    </plurals>
-
     <string name="go_dating_message">Начните знакомиться, и здесь вы увидите пользователей,
         посетивших ваш профиль
     </string>
@@ -1064,5 +1051,12 @@
     <string name="thanks_for_your_rate_rate_app">Оставить отзыв в AppStore</string>
     <string name="thanks_for_your_rate_close">Закрыть</string>
 
+    <plurals name="novice_sympathies_bonuses">
+        <item quantity="zero">Вы получаете %1$d симпатий в\nподарок! Это означает, что вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
+        <item quantity="one">Вы получаете %1$d симпатию в\nподарок! Это означает, что вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
+        <item quantity="many">Вы получаете %1$d симпатий в\nподарок! Это означает, что вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
+        <item quantity="few">Вы получаете %1$d симпатии в\nподарок! Это означает, что вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
+        <item quantity="other">Вы получаете %1$d симпатий в\nподарок! Это означает, что вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
+    </plurals>
 
 </resources>
