--- a/src/blueStacks/res/values-fr/strings.xml
+++ b/src/blueStacks/res/values-fr/strings.xml
@@ -774,4 +774,9 @@
   <string name="chat_auto_reply_button">Devenir VIP</string>
   <string name="take_photo_text_1">Veuillez télécharger votre photo pour faire connaissance.</string>
   <string name="take_photo_text_2">Seul vous êtes autorisé à apparaître sur la photo. Toutes les photos sont modérées.</string>
+  <string name="unlock_by_viewed_ad_video_button_text">Déverrouiller gratuitement à %s</string>
+  <plurals name="free_minutes">
+    <item quantity="other">%d minutes</item>
+    <item quantity="one">%d minute</item>
+  </plurals>
 </resources>
