--- a/src/google/res/values-tr/strings.xml
+++ b/src/google/res/values-tr/strings.xml
@@ -848,4 +848,5 @@
     <string name="thanks_for_your_rate_bottom_label">Düşüncelerinizi bizimle AppStore\'da paylaşın. Ne düşündüğünüze önem veriyoruz!</string>
     <string name="thanks_for_your_rate_rate_app">AppStore\'da bizi değerlendirin</string>
     <string name="thanks_for_your_rate_close">Kapat</string>
+    <plurals name="novice_sympathies_bonuses"></plurals>
 </resources>
