--- a/src/google/res/values-de/strings.xml
+++ b/src/google/res/values-de/strings.xml
@@ -815,4 +815,10 @@
     <string name="thanks_for_your_rate_bottom_label">Teile deine Gedanken im App Store. Wie schätzen jede Bewertung!</string>
     <string name="thanks_for_your_rate_rate_app">Schreibe eine Bewertung im App Store.</string>
     <string name="thanks_for_your_rate_close">Schließen</string>
+    <plurals name="novice_sympathies_bonuses">
+        <item quantity="zero">Du bekommst %1$d Likes als \nGeschenk! Das bedeutet, dass diejenigen, \ndie dir Likes schicken, %2$d dich \nwirklich mögen.</item>
+        <item quantity="other">Du bekommst %1$d Likes als \nGeschenk! Das bedeutet, dass diejenigen, \ndie dir Likes schicken, %2$d dich \nwirklich mögen.</item>
+        <item quantity="one">Du bekommst %1$d Like als \nGeschenk! Das bedeutet, dass diejenigen, \ndie dir Likes schicken, %2$d dich \nwirklich mögen.</item>
+    </plurals>
+    <string name="buy_vip_title_from_input">Du kannst ein Gespräch mit einem anderen User starten, wenn du VIP-Status hast.</string>
 </resources>
