--- a/src/google/res/values-fr/strings.xml
+++ b/src/google/res/values-fr/strings.xml
@@ -880,4 +880,10 @@
     <string name="thanks_for_your_rate_bottom_label">Partagez votre avis dans l\'App Store. Nous apprécions tous les commentaires !</string>
     <string name="thanks_for_your_rate_rate_app">Laisser un commentaire sur l\'App Store</string>
     <string name="thanks_for_your_rate_close">Fermé</string>
+    <plurals name="novice_sympathies_bonuses">
+        <item quantity="zero">Vous recevrez %1$d J\'aime comme\ncadeau ! Cela signifie que \nles personnes qui vous envoient des J\'aime \nvous aiment réellement %2$d.</item>
+        <item quantity="other">Vous recevrez %1$d J\'aime comme\ncadeau ! Cela signifie que \nles personnes qui vous envoient des J\'aime \nvous aiment réellement %2$d.</item>
+        <item quantity="one">Vous recevrez %1$d J\'aime comme\ncadeau ! Cela signifie que \nles personnes qui vous envoient des J\'aime \nvous aiment réellement %2$d.</item>
+    </plurals>
+    <string name="buy_vip_title_from_input">Vous pouvez commencer une conversation avec un utilisateur si vous avez le statut VIP</string>
 </resources>
