--- a/src/google/res/values-sr/strings.xml
+++ b/src/google/res/values-sr/strings.xml
@@ -883,4 +883,5 @@
     <string name="thanks_for_your_rate_bottom_label">Поделите своје утиске у AppStore. Ценимо свако мишљење!</string>
     <string name="thanks_for_your_rate_rate_app">Оставити мишљење у AppStore</string>
     <string name="thanks_for_your_rate_close">Затворити</string>
+    <string name="buy_vip_title_from_input">Можете започети разговор са корисником ако имате VIP-статус</string>
 </resources>
