--- a/src/blueStacks/res/values-ru/strings.xml
+++ b/src/blueStacks/res/values-ru/strings.xml
@@ -952,4 +952,7 @@
       понравитесь %2$d людям,\nкоторые выразят вам свою симпатию
     </item>
   </plurals>
+  <string name="buy_vip_title_from_input">Начать общение с пользователем можно, если у вас есть
+    VIP-статус
+  </string>
 </resources>
