--- a/src/derived/res/values-fr/strings.xml
+++ b/src/derived/res/values-fr/strings.xml
@@ -958,4 +958,7 @@
             personnes qui vous envoient des J\'aime \nvous aiment réellement %2$d.
         </item>
     </plurals>
+    <string name="buy_vip_title_from_input">Vous pouvez commencer une conversation avec un
+        utilisateur si vous avez le statut VIP
+    </string>
 </resources>
