--- a/src/derived/res/values-pt/strings.xml
+++ b/src/derived/res/values-pt/strings.xml
@@ -934,4 +934,7 @@
             \nquem enviares Gostos \ngostam mesmo %2$d de ti
         </item>
     </plurals>
+    <string name="buy_vip_title_from_input">Podes começar uma conversa com um utilizador se tiveres
+        estatuto VIP
+    </string>
 </resources>
