--- a/src/amazon/res/values-tr/strings.xml
+++ b/src/amazon/res/values-tr/strings.xml
@@ -892,4 +892,7 @@
     <string name="thanks_for_your_rate_close">Kapat</string>
     <plurals name="novice_sympathies_bonuses">
     </plurals>
+    <string name="buy_vip_title_from_input">Eğer VIP üyeyseniz dilediğiniz bir kullanıcı ile sohbete
+        hemen başlayabilirsiniz
+    </string>
 </resources>
