--- a/src/blueStacks/res/values-sr/strings.xml
+++ b/src/blueStacks/res/values-sr/strings.xml
@@ -914,4 +914,7 @@
   </string>
   <string name="thanks_for_your_rate_rate_app">Оставити мишљење у AppStore</string>
   <string name="thanks_for_your_rate_close">Затворити</string>
+  <string name="buy_vip_title_from_input">Можете започети разговор са корисником ако имате
+    VIP-статус
+  </string>
 </resources>
