--- a/src/blueStacks/res/values-tr/strings.xml
+++ b/src/blueStacks/res/values-tr/strings.xml
@@ -884,4 +884,7 @@
   <string name="thanks_for_your_rate_rate_app">AppStore\'da bizi değerlendirin</string>
   <string name="thanks_for_your_rate_close">Kapat</string>
   <plurals name="novice_sympathies_bonuses" />
+  <string name="buy_vip_title_from_input">Eğer VIP üyeyseniz dilediğiniz bir kullanıcı ile sohbete
+    hemen başlayabilirsiniz
+  </string>
 </resources>
