--- a/src/ifree/res/values-it/strings.xml
+++ b/src/ifree/res/values-it/strings.xml
@@ -879,4 +879,5 @@
         <item quantity="other">Ricevi %1$d simpatie in\nregalo! Questo significa che tu\n piacerai sicuramente%2$d agli utenti,\nche ti invieranno la loro simpatia</item>
         <item quantity="one">Ricevi %1$d simpatia in\nregalo! Questo significa che tu\n piacerai sicuramente%2$d agli utenti,\nche ti invieranno la loro simpatia</item>
     </plurals>
+    <string name="buy_vip_title_from_input">Per cominciare a chattare con questo utente devi essere VIP</string>
 </resources>
