--- a/src/ifree/res/values-ru/strings.xml
+++ b/src/ifree/res/values-ru/strings.xml
@@ -1059,4 +1059,5 @@
         <item quantity="other">Вы получаете %1$d симпатий в\nподарок! Это означает, что вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
     </plurals>
 
+    <string name="buy_vip_title_from_input">Начать общение с пользователем можно, если у вас есть VIP-статус</string>
 </resources>
