--- a/src/blueStacks/res/values-ru/strings.xml
+++ b/src/blueStacks/res/values-ru/strings.xml
@@ -955,4 +955,6 @@
   <string name="buy_vip_title_from_input">Начать общение с пользователем можно, если у вас есть
     VIP-статус
   </string>
+  <string name="mutual_like_popup_text">Ваша симпатия взаимна!</string>
+  <string name="mutual_like_popup_button">Сказать &quot;Привет&quot;</string>
 </resources>
