--- a/src/derived/res/values-tr/strings.xml
+++ b/src/derived/res/values-tr/strings.xml
@@ -890,8 +890,7 @@
     </string>
     <string name="thanks_for_your_rate_rate_app">AppStore\'da bizi değerlendirin</string>
     <string name="thanks_for_your_rate_close">Kapat</string>
-    <plurals name="novice_sympathies_bonuses">
-    </plurals>
+    <plurals name="novice_sympathies_bonuses"></plurals>
     <string name="buy_vip_title_from_input">Eğer VIP üyeyseniz dilediğiniz bir kullanıcı ile sohbete
         hemen başlayabilirsiniz
     </string>
