#45876: refactor, sync strings

--- a/src/amazon/res/values-pt/strings.xml
+++ b/src/amazon/res/values-pt/strings.xml
@@ -870,4 +870,6 @@
         <item quantity="other">%d minutos</item>
         <item quantity="one">%d minuto</item>
     </plurals>
+    <string name="buy_button_sticker_popular">Mais Vendido</string>
+    <string name="buy_button_sticker_best_value">Melhor preço</string>
 </resources>
