--- a/src/ifree/res/values-pt/strings.xml
+++ b/src/ifree/res/values-pt/strings.xml
@@ -863,4 +863,6 @@
         <item quantity="other">%d minutos</item>
         <item quantity="one">%d minuto</item>
     </plurals>
+    <string name="buy_button_sticker_popular">Mais Vendido</string>
+    <string name="buy_button_sticker_best_value">Melhor preço</string>
 </resources>
