--- a/src/ifree/res/values/strings.xml
+++ b/src/ifree/res/values/strings.xml
@@ -840,4 +840,6 @@
         <item quantity="other">%d minutes</item>
         <item quantity="one">%d minute</item>
     </plurals>
+    <string name="buy_button_sticker_popular">Bestseller</string>
+    <string name="buy_button_sticker_best_value">Best price</string>
 </resources>
