--- a/src/amazon/res/values/strings.xml
+++ b/src/amazon/res/values/strings.xml
@@ -843,4 +843,15 @@
     </plurals>
     <string name="buy_button_sticker_popular">Popular</string>
     <string name="buy_button_sticker_best_value">Best value</string>
+    <string name="ban_liberty_title">No ads!</string>
+    <string name="ban_liberty_description">Just dating, pure and simple</string>
+    <string name="guest_liberty_title">Guests</string>
+    <string name="guest_liberty_description">Find out who visited your profile page</string>
+    <string name="star_liberty_title">Popular Users</string>
+    <string name="star_liberty_description">Most popular ice-breakers to start a conversation
+    </string>
+    <string name="crown_liberty_title">Stand out</string>
+    <string name="crown_liberty_description">Easily stand out in Search and Messages</string>
+    <string name="like_liberty_title">Likes</string>
+    <string name="like_liberty_description">See who likes you</string>
 </resources>
