--- a/src/google/res/values-fr/strings.xml
+++ b/src/google/res/values-fr/strings.xml
@@ -886,4 +886,6 @@
         <item quantity="one">Vous recevrez %1$d J\'aime comme\ncadeau ! Cela signifie que \nles personnes qui vous envoient des J\'aime \nvous aiment réellement %2$d.</item>
     </plurals>
     <string name="buy_vip_title_from_input">Vous pouvez commencer une conversation avec un utilisateur si vous avez le statut VIP</string>
+    <string name="mutual_like_popup_text">Le sentiment est réciproque !</string>
+    <string name="mutual_like_popup_button">Dites « Salut »</string>
 </resources>
