--- a/src/google/res/values-es/strings.xml
+++ b/src/google/res/values-es/strings.xml
@@ -883,4 +883,6 @@
         <item quantity="one">¡Recibirás %1$d simpatías de\nregalo! Esto significa que tú\ncon seguridad gustas al %2$d de las personas,\nque te expresarán su simpatía.</item>
     </plurals>
     <string name="buy_vip_title_from_input">Se puede comenzar la comunicación con el usuario si tienes el estado VIP</string>
+    <string name="mutual_like_popup_text">¡Tu simpatía es mutua!</string>
+    <string name="mutual_like_popup_button">Decir \"hola\"</string>
 </resources>
