--- a/src/google/res/values-it/strings.xml
+++ b/src/google/res/values-it/strings.xml
@@ -880,4 +880,6 @@
         <item quantity="one">Ricevi %1$d simpatia in\nregalo! Questo significa che tu\n piacerai sicuramente%2$d agli utenti,\nche ti invieranno la loro simpatia</item>
     </plurals>
     <string name="buy_vip_title_from_input">Per cominciare a chattare con questo utente devi essere VIP</string>
+    <string name="mutual_like_popup_text">La simpatia è reciproca!</string>
+    <string name="mutual_like_popup_button">Dici \" Ciao\"</string>
 </resources>
