--- a/src/google/res/values/strings.xml
+++ b/src/google/res/values/strings.xml
@@ -856,4 +856,6 @@
         <item quantity="one">You will receive %1$d Like as a\ngift! This means that those \nwho send you Likes \nreally like %2$d you</item>
     </plurals>
     <string name="buy_vip_title_from_input">You can begin a conversation with a user if you have VIP-status</string>
+    <string name="mutual_like_popup_text">The feeling is mutual!</string>
+    <string name="mutual_like_popup_button">Say \"Hi\"</string>
 </resources>
