--- a/src/amazon/res/values-de/strings.xml
+++ b/src/amazon/res/values-de/strings.xml
@@ -806,4 +806,18 @@
         <item quantity="other">%d Minuten</item>
         <item quantity="one">%d Minute</item>
     </plurals>
+    <string name="buy_button_sticker_popular">Beliebt</string>
+    <string name="buy_button_sticker_best_value">Bester Preis</string>
+    <string name="ban_liberty_title">Keine Werbung!</string>
+    <string name="ban_liberty_description">Einfach nur Dating, leicht und unkompliziert</string>
+    <string name="guest_liberty_title">Gäste</string>
+    <string name="guest_liberty_description">Erfahre, wer dein Profil besucht hat</string>
+    <string name="star_liberty_title">Beliebte Nutzer</string>
+    <string name="star_liberty_description">Die beliebtesten Eisbrecher für Gespräche</string>
+    <string name="crown_liberty_title">Auffallen.</string>
+    <string name="crown_liberty_description">Falle sowohl bei Suchergebnissen als auch in deinen
+        Nachrichten auf
+    </string>
+    <string name="like_liberty_title">Likes</string>
+    <string name="like_liberty_description">Erfahre, wer dich mag</string>
 </resources>
