--- a/src/google/res/values-de/strings.xml
+++ b/src/google/res/values-de/strings.xml
@@ -823,4 +823,7 @@
     <string name="buy_vip_title_from_input">Du kannst ein Gespräch mit einem anderen User starten, wenn du VIP-Status hast.</string>
     <string name="mutual_like_popup_text">Das Gefühl beruht auf Gegenseitigkeit!</string>
     <string name="mutual_like_popup_button">Sag \"Hallo\"</string>
+    <string name="people_nearby_access_to_location_description">Um zu sehen wer in deiner Nähe ist, musst du Zugang zu deiner Standpunktortung erlauben.</string>
+    <string name="people_nearby_not_enought_money">Du hast nicht genug Coins für Zugang zur \"Leute in meiner Nähe\" Funktion.</string>
+    <string name="NSLocationWhenInUseUsageDescription">Um Zugang zu dieser Funktion erhalten, musst du dein Einverständnis gegen.</string>
 </resources>
