--- a/src/google/res/values-tr/strings.xml
+++ b/src/google/res/values-tr/strings.xml
@@ -210,7 +210,7 @@
     <string name="filter_age_end_prefix">%s kadar</string>
     <string name="filter_constitution_template">%1$d ile %2$d arası</string>
     <string name="filter_cities_all">Bütün şehirlerde</string>
-    <string name="purchase_header_title">Hesap bakiyeniz:</string>
+    <string name="purchase_header_title">Bakiye:</string>
     <string name="buying_header_title">Satın almalar</string>
     <plurals name="buying_gift_you_need_coins">
         <item quantity="other">Bir hediye yollamak için daha fazla %d para gerek</item>
@@ -854,4 +854,8 @@
     <string name="buy_vip_title_from_input">Eğer VIP üyeyseniz dilediğiniz bir kullanıcı ile sohbete hemen başlayabilirsiniz</string>
     <string name="mutual_like_popup_text">Beğeniniz karşılıklı</string>
     <string name="mutual_like_popup_button">\"Merhaba\" de</string>
+    <string name="people_nearby_access_to_location_description">Kimlerin yakınınızda olduğunu görebilmek için lokasyonunuza erşim izni vermeniz gerekiyor.</string>
+    <string name="people_nearby_not_found_title">Şu an size yakın kullanıcı bulunamdı</string>
+    <string name="people_nearby_not_found_description">Tekrar denemek için, ekranın ortasına parmağınızla dokunup basılı tutunuz.</string>
+    <string name="NSLocationWhenInUseUsageDescription">Bu fonksiyona erişebilmek için izin vermeniz gerekiyor.</string>
 </resources>
